--- a/src/main/resources/public/scss/theme/default/_layout.scss
+++ b/src/main/resources/public/scss/theme/default/_layout.scss
@@ -64,6 +64,9 @@
         }
         // pagingList
         @include pagingListTemplate();
+
+        // treeEdit
+        @include treeEditTemplate();
       }
 
       // 리스트
