--- a/src/main/resources/public/scss/template/mixins/_layout.scss
+++ b/src/main/resources/public/scss/template/mixins/_layout.scss
@@ -190,7 +190,17 @@
       }
     }
   }
-
+}
+// treeEditTemplate
+@mixin treeEditTemplate() {
+  .z-page-column-item {
+    display: flex;
+    flex: 1; // flex: 1 1 0;
+    padding: 0 0.9375rem; // 15px
+    &:first-child {
+      padding-left: 0;
+    }
+  }
 }
 // list
 /*
