--- a/src/main/resources/public/template/layout/itsm/pageType/treeEditLayout.html
+++ b/src/main/resources/public/template/layout/itsm/pageType/treeEditLayout.html
@@ -6,18 +6,18 @@
 <body>
 <div layout:fragment="mainContent" class="z-main-content">
     <th:block layout:fragment="pageContent">
+        <!--/* 페이지별 타이틀 */-->
+        <div layout:fragment="pageTitle" class="z-page-title"></div>
         <div class="flex-row">
-            <div class="flex-column">
-                <!--/* 페이지별 타이틀 */-->
-                <div layout:fragment="pageTitle" class="z-page-title"></div>
+            <div class="flex-column z-page-column-item">
                 <!--/* 페이지별 검색 */-->
                 <div layout:fragment="pageSearching" class="z-page-search"></div>
                 <!--/* 페이지별 트리 */-->
                 <div layout:fragment="pageTree" class="z-page-tree"></div>
             </div>
-            <div class="flex-column">
+            <div class="flex-column z-page-column-item">
                 <!--/* 편집 영역 */-->
-                <div layout:fragment="pageTree" class="z-page-edit"></div>
+                <div layout:fragment="pageEdit" class="z-page-edit"></div>
             </div>
         </div>
     </th:block>
