#10852 보고서 구현 1. 명칭 수정 2. 임시 메뉴 아이콘 추가 3. 보기 화면 추가 4. 보고서 아이콘 추가 (임시) 5. ERD 추가

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3510,6 +3510,17 @@ table[id=documentDisplay] td {
   mask-position: center;
   background: #8B9094;
 }
+.z-gnb .z-icon-gnb-report {
+  width: 1.5rem;
+  height: 1.5rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
+  mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #8B9094;
+}
 .z-gnb .z-icon-gnb-dashboard {
   width: 1.5rem;
   height: 1.5rem;
