--- a/src/main/resources/public/template/report/reportTemplateView.html
+++ b/src/main/resources/public/template/report/reportTemplateView.html
@@ -48,9 +48,6 @@
                 </div>
                 <div id="details" class="template">
                     <div class="flex-row justify-content-end">
-                        <button type="button" class="z-button-icon extra" onclick="addChart()">
-                            <span class="z-icon i-plus"></span>
-                        </button>
                     </div>
                     <div id="chartList" class="chart"></div>
                 </div>
@@ -60,13 +57,7 @@
                     <a class="z-button secondary" href="/reports/template/search" th:text="#{common.btn.list}"></a>
                 </div>
                 <div class="z-button-list">
-                    <button class="z-button primary" th:if="${template == null}" sec:authorize="hasAuthority('report.create')"
-                            onclick="actionTemplate('post')" th:text="#{common.btn.register}"></button>
-                    <button class="z-button primary" th:if="${template?.templateId}" sec:authorize="hasAuthority('report.update')"
-                            onclick="actionTemplate('put')" th:text="#{common.btn.modify}"></button>
                     <button class="z-button secondary" onclick="preview()" th:text="#{report.btn.preview}"></button>
-                    <button class="z-button secondary" th:if="${template?.templateId}" sec:authorize="hasAuthority('report.delete')"
-                            onclick="actionTemplate('delete')" th:text="#{common.btn.delete}"></button>
                 </div>
             </div>
         </div>
@@ -87,6 +78,11 @@
                     addChart(item);
                 })
             }
+
+            const detailObject = document.querySelector('.report-template-content-edit');
+            detailObject.querySelectorAll('input').forEach(function(object) { object.disabled = true; });
+            detailObject.querySelectorAll('select').forEach(function(object) { object.disabled = true; });
+            detailObject.querySelectorAll('textarea').forEach(function(object) { object.disabled = true; });
 
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
@@ -116,15 +112,9 @@
             let rowElement =
                 `<div class="flex-row mt-2">` +
                 `<div class="flex-column col-11"><select name="chart" id="${rowId}_chart">${options}</select></div>` +
-                `<div class="flex-column col-1"><button id="${rowId}_delete" type="button" class="z-button-icon extra"><span class="z-icon i-delete"></span></button></div>` +
+                `<div class="flex-column col-1"></div>` +
                 `</div>`;
             target.insertAdjacentHTML('beforeend', rowElement);
-
-            const deleteBtn = document.getElementById(rowId + '_delete');
-            deleteBtn.addEventListener('click', function (e) {
-                e.stopPropagation();
-                this.parentElement.parentElement.remove();
-            });
             aliceJs.initDesignedSelectTag();
         }
 
