--- a/src/main/resources/public/template/report/reportList.html
+++ b/src/main/resources/public/template/report/reportList.html
@@ -24,7 +24,9 @@
                 <a th:text="${report.reportName}" th:href="@{/reports/report/{id}/view(id=${report.reportId})}" th:target="_blank"></a>
             </td>
             <td style="width:30%;" class="align-center date-time" name="createDt" th:text="${report.publishDt}"></td>
-            <td style="width:20%;" class="align-center">DOWN</td>
+            <td style="width:20%;" class="align-center">
+                <button class="z-button secondary" th:text="DOWN" onclick="download()"></button>
+            </td>
         </tr>
     </th:block>
     </tbody>
