--- a/src/main/resources/public/template/report/reportTemplateSearch.html
+++ b/src/main/resources/public/template/report/reportTemplateSearch.html
@@ -4,13 +4,13 @@
       xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
       layout:decorator="layout/defaultLayout">
 <head>
-    <title th:text="#{report.label.config}"></title>
+    <title th:text="#{menu.report.template}"></title>
 </head>
 <body>
 <th:block layout:fragment="content">
     <div class="board-admin-header">
         <div class="header-title flex-row align-items-baseline">
-            <h1 th:text="#{report.label.config}"></h1>
+            <h1 th:text="#{menu.report.template}"></h1>
             <h6 class="description ml-2" th:text="#{report.msg.configDescription}"></h6>
         </div>
         <div class="header-search flex-row">
