--- a/src/main/resources/public/scss/template/_tag.scss
+++ b/src/main/resources/public/scss/template/_tag.scss
@@ -43,7 +43,7 @@
     }
   }
 
-  &.#{$common-prefix}input {
+  &.z-input {
     height: max-content;
     padding: 0;
     @include border(0.0625rem, solid, $element-border-color); // 1px
